Fixed default photo covering the entire officer profile page.

--- a/app/assets/stylesheets/officers.scss
+++ b/app/assets/stylesheets/officers.scss
@@ -27,9 +27,9 @@ div#officer_display {
     width:49%;
     
     img {
-      height:100%;
-      max-height:500px;
-      width:auto;
+      width:100%;
+      max-width:500px;
+      height:auto;
     }
   }
   
